Update jimp dependency version in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "megajs": "1.1.7",
     "pm2": "^5.4.0",
     "async-mutex":"0.4.1",
-    "jimp": "*"
+    "jimp": "^0.22.12"
       
    }
 }
